--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 [params]
     
-    avatar = "avatar.jpg"
+    avatar = "IMG_1874.jpg"
     # avatarDescription = "My avatar description"
     favicon = "favicon.ico"
     description = """
