--- a/config.toml
+++ b/config.toml
@@ -9,13 +9,12 @@ hasCJKLanguage = true
     unsafe = true # Allow user HTML tags
 
 [params]
-    author = "Your Name"
-    avatar = "avatar.jpg"
+    author = "フミヨシ"
+    avatar = "IMG_1874.jpg"
     # avatarDescription = "My avatar description"
     favicon = "favicon.ico"
     description = """
-        Please write anything here.
-        Profiles, backgrounds, favorite things etc.
+        nothing but nonsense
     """
     publicationYear = "2019"
     # listPageDateFormat = "January, 2006" # See https://gohugo.io/functions/format/
