サンプルサイトからの変更
サンプルサイトを参考し変更

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseurl = "https://example.com/"
-title = "Site Title"
+title = "島の細道"
 theme = "pulp"
 canonifyurls = true
 hasCJKLanguage = true
@@ -11,15 +10,14 @@ hasCJKLanguage = true
     unsafe = true # Allow user HTML tags
 
 [params]
-    author = "Your Name"
+    author = "フミヨシ.C"
     avatar = "avatar.jpg"
     # avatarDescription = "My avatar description"
     favicon = "favicon.ico"
     description = """
-        Please write anything here.
-        Profiles, backgrounds, favorite things etc.
+        nothing but nonsense
     """
-    publicationYear = "2019"
+    publicationYear = "2020"
     # listPageDateFormat = "January, 2006" # See https://gohugo.io/functions/format/
     # singlePageDateFormat = "January 2, 2006"
     # custom_css = ["/css/custom.css"]
