--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-title = "島の細道"
+baseurl = "https://example.com/"
+title = "Site Title"
 theme = "pulp"
 canonifyurls = true
 hasCJKLanguage = true
@@ -10,14 +11,15 @@ hasCJKLanguage = true
     unsafe = true # Allow user HTML tags
 
 [params]
-    author = "フミヨシ.C"
+    author = "Your Name"
     avatar = "avatar.jpg"
     # avatarDescription = "My avatar description"
     favicon = "favicon.ico"
     description = """
-        nothing but nonsense
+        Please write anything here.
+        Profiles, backgrounds, favorite things etc.
     """
-    publicationYear = "2020"
+    publicationYear = "2019"
     # listPageDateFormat = "January, 2006" # See https://gohugo.io/functions/format/
     # singlePageDateFormat = "January 2, 2006"
     # custom_css = ["/css/custom.css"]
