--- a/theme.toml
+++ b/theme.toml
@@ -1,13 +1,18 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "pulp"
+name = "Hermit"
 license = "MIT"
-licenselink = "https://github.com/koirand/pulp/blob/master/LICENSE"
-description = "Pulp is a Hugo theme for getting a simple, easy-to-read blog site."
-tags = ["minimal", "blog", "simple", "light", "personal", "search"]
-min_version = "0.41"
+licenselink = "https://github.com/Track3/hermit/blob/master/LICENSE"
+description = "A minimal and fast hugo theme for bloggers."
+homepage = "https://github.com/Track3/hermit"
+tags = ["blog", "minimal", "dark", "responsive"]
+features = [
+  "single column",
+  "featured image",
+  "social icons",
+  "google analytics",
+  "disqus"
+]
+min_version = 0.43
 
 [author]
-  name = "koirand"
-  homepage = "https://koirand.github.io"
+  name = "Track3"
+  homepage = "https://www.xxxlbox.com"
